fix(MultipleFileUpload): use correct progress font color and close icon

--- a/src/patternfly/components/MultipleFileUpload/multiple-file-upload-status-item-close.hbs
+++ b/src/patternfly/components/MultipleFileUpload/multiple-file-upload-status-item-close.hbs
@@ -3,6 +3,6 @@
     {{{multiple-file-upload-status-item-close--attribute}}}
   {{/if}}>
   {{#> button button--modifier="pf-m-plain" button--attribute='aria-label="Remove from list"'}}
-    <i class="fas fa-times-circle" aria-hidden="true"></i>
+    <i class="fas fa-times" aria-hidden="true"></i>
   {{/button}}
 </div>
