--- a/src/patternfly/components/OverflowMenu/overflow-menu.scss
+++ b/src/patternfly/components/OverflowMenu/overflow-menu.scss
@@ -1,41 +1,41 @@
-:where(:root),
-:where(.#{$overflow-menu}) {
-  --#{$overflow-menu}--ColumnGap: var(--pf-t--global--spacer--sm);
+:root {
+  --#{$overflow-menu}--ColumnGap: var(--pf-t--global--spacer--md);
+
+  // * Overflow menu group
+  --#{$overflow-menu}__group--ColumnGap: var(--pf-t--global--spacer--md);
+
+  // * Overflow menu button group
+  --#{$overflow-menu}__group--m-button-group--ColumnGap: var(--pf-t--global--spacer--sm);
 
   // * Overflow menu icon button group
-  --#{$overflow-menu}__group--m-icon-button-group--ColumnGap: 0;
-}
-
-// - Overflow menu - Overflow menu content - Overflow menu group
-.#{$overflow-menu},
-.#{$overflow-menu}__content,
-.#{$overflow-menu}__group {
-  display: flex;
+  --#{$overflow-menu}__group--m-icon-button-group--ColumnGap: var(--pf-t--global--spacer--xs);
 }
 
 // - Overflow menu
 .#{$overflow-menu} {
+  display: inline-flex;
   column-gap: var(--#{$overflow-menu}--ColumnGap);
-  width: fit-content;
 }
 
-// - Overflow menu content
-.#{$overflow-menu}__content {
+// - Overflow menu content - Overflow menu group
+.#{$overflow-menu}__content,
+.#{$overflow-menu}__group {
+  display: flex;
   align-items: start;
 }
 
 // - Overflow menu group
 .#{$overflow-menu}__group {
-  column-gap: var(--#{$overflow-menu}__group--ColumnGap, var(--#{$overflow-menu}--ColumnGap));
+  column-gap: var(--#{$overflow-menu}__group--ColumnGap);
 
   // - Overflow menu button group
   &.pf-m-button-group {
-    column-gap: var(--#{$overflow-menu}__group--m-button-group--ColumnGap, var(--#{$overflow-menu}--ColumnGap));
+    column-gap: var(--#{$overflow-menu}__group--m-button-group--ColumnGap);
   }
 
   // - Overflow menu icon button group
   &.pf-m-icon-button-group {
-    column-gap: var(--#{$overflow-menu}__group--m-icon-button-group--ColumnGap, var(--#{$overflow-menu}--ColumnGap));
+    column-gap: var(--#{$overflow-menu}__group--m-icon-button-group--ColumnGap);
   }
 }
 
@@ -44,7 +44,7 @@
   column-gap: var(--#{$overflow-menu}__item--ColumnGap, var(--#{$overflow-menu}--ColumnGap));
 }
 
-// - Overflow menu content - Overflow menu control - Overflow menu group - Overflow menu item
+// - Overflow menu content - Overflow menu control
 .#{$overflow-menu}__content,
 .#{$overflow-menu}__control  {
   column-gap: var(--#{$overflow-menu}--ColumnGap);
