--- a/src/patternfly/components/ClipboardCopy/clipboard-copy.scss
+++ b/src/patternfly/components/ClipboardCopy/clipboard-copy.scss
@@ -65,7 +65,7 @@
 
 .#{$clipboard-copy}__group {
   display: flex;
-  gap: var(--pf-t--global--spacer--xs);
+  gap: var(--#{$clipboard-copy}__group--Gap);
 
   > * + * {
     margin-inline-start: -1px;
